<resources>
    <string name="app_name">My Photos</string>
    <string name="appname">My Photos</string>

    <string name="dummy_button">My Photos</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Loading..</string>
    <string name="sign_in">Sign in</string>
    <string name="download">Delete</string>
    <string name="sign_up">Sign up</string>


    <string name="logout">Log Out</string>
    <string name="add">Add New File</string>


    <string name="invalid_username">username not valid</string>
    <string name="username_exists">username exists please use other </string>
    <string name="invalid_password">password must be more than 6 chars</string>
    <string name="login_fail">username or password not valid</string>


    <string name="alerts_dialog_title">My Library</string>
    <string name="ok_btn">Ok</string>
    <string name="login_success">Congratulations Login Successful</string>
    <string name="register_success">Congratulations Login Successful</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="upload">Upload</string>
    <string name="file_name">File name</string>
    <string name="file_size">File Size</string>
    <string name="please_load_file">Please load  valid file </string>
    <string name="upload_fail">upload fail try later </string>
    <string name="thanks_for_add">Thanks for uploading new image to our lib </string>

</resources>
