<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".uploadNewFile">

    <Button
        android:id="@+id/addFileBtn"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="72dp"
        android:background="@color/backgroundColor2"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/uploadImage"
        android:layout_width="149dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorDark1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img2" />

    <EditText
        android:enabled="false"
        android:id="@+id/fileNameTxt"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/file_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addFileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImage"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:enabled="false"
        android:id="@+id/fileSize"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/file_size"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addFileBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTxt"
        app:layout_constraintVertical_bias="0.21" />
</android.support.constraint.ConstraintLayout>