<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unsplash"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/myCoverLinerLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/myAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/appname"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorDark1"
            android:textColorLink="@android:color/background_light" />

        <EditText
            android:id="@+id/passwordEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="password "
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@android:color/background_light"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@color/colorDark1"
            android:textColorLink="@android:color/background_light" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/background_light"
            android:text="@string/sign_in"
            android:textColor="@color/colorDark1" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorDark1"
            android:text="@string/sign_up"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</LinearLayout>